# prime-rl

./: CHANGELOG.md  Dockerfile.cuda  pyproject.toml
.github/workflows/: nightly_tests.yaml
examples/alphabet_sort/: sft_distill_hard.toml
examples/qwen30b_math/: README.md
examples/qwen30b_swe/: README.md
skills/config/: SKILL.md
src/prime_rl/configs/: inference.py  orchestrator.py  rl.py  shared.py  trainer.py
src/prime_rl/entrypoints/: rl.py
src/prime_rl/inference/: patches.py
src/prime_rl/inference/vllm/: server.py
src/prime_rl/inference/vllm/worker/: __init__.py  nccl.py
src/prime_rl/orchestrator/: advantage.py  envs.py  filters.py  inference_metrics.py  orchestrator.py  scheduler.py
src/prime_rl/templates/: multi_node_rl.sbatch.j2
src/prime_rl/trainer/: batch.py  lora.py  model.py
src/prime_rl/trainer/models/: __init__.py
src/prime_rl/trainer/models/glm4_moe/: modeling_glm4_moe.py
src/prime_rl/trainer/models/glm_moe_dsa/: modeling_glm_moe_dsa.py
src/prime_rl/trainer/models/gpt_oss/: __init__.py  configuration_gpt_oss.py  converting_gpt_oss.py  modeling_gpt_oss.py
src/prime_rl/trainer/models/layers/: moe.py  ring_attn.py
src/prime_rl/trainer/models/layers/lora/: multi_moe.py
src/prime_rl/trainer/models/llama/: modeling_llama.py
src/prime_rl/trainer/models/minimax_m2/: modeling_minimax_m2.py
src/prime_rl/trainer/models/qwen3_moe/: modeling_qwen3_moe.py
src/prime_rl/trainer/rl/: data.py  loss.py  train.py
src/prime_rl/trainer/rl/broadcast/: nccl.py
src/prime_rl/trainer/sft/: data.py
src/prime_rl/transport/: types.py
src/prime_rl/utils/: chat_template.py  client.py  elastic.py
src/prime_rl/utils/monitor/: wandb.py
tests/unit/: test_configs.py
tests/unit/orchestrator/: test_advantage.py  test_batch.py  test_scheduler.py
tests/unit/train/rl/: test_loss.py
